--- a/Humback_Wales.ipynb
+++ b/Humback_Wales.ipynb
@@ -263,12 +263,16 @@
       "metadata": {
         "id": "mctmUIim5QyY",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "6e0c27e8-7e6f-496a-aabd-0266265795ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 234
+        }
       },
       "cell_type": "code",
       "source": [
         "train_dir_path = \"/content/new_train\"\n",
-        "test_dir_path = \"/content/new_test\"\n",
+        "validation_dir_path = \"/content/new_test\"\n",
         "\n",
         "myids = ['w_23a388d',\n",
         "'w_9b5109b',\n",
@@ -314,8 +318,20 @@
         "    path = os.path.join(test_dir_path,wid)\n",
         "    os.mkdir(path)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileExistsError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-f085553542e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     34\u001b[0m 'w_fd6a3ad']\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dir_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_dir_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileExistsError\u001b[0m: [Errno 17] File exists: '/content/new_train'"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
@@ -350,12 +366,240 @@
         "    for row in reader:\n",
         "        if row[1] in myids:\n",
         "            src = os.path.join(full_train_dir, row[0])\n",
-        "            dst = os.path.join(test_dir_path,row[1], row[0])\n",
+        "            dst = os.path.join(validation_dir_path,row[1], row[0])\n",
         "            \n",
         "            copyfile(src, dst)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "eulXmoKTNHNr",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# Now, Let's do the training"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "8H5sLQt3NLYw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "564faf47-a766-416f-a0fe-400724b1718e"
+      },
+      "cell_type": "code",
+      "source": [
+        "image_size = 160 # All images will be resized to 160x160\n",
+        "batch_size = 32\n",
+        "\n",
+        "# Rescale all images by 1./255 and apply image augmentation\n",
+        "train_datagen = keras.preprocessing.image.ImageDataGenerator(\n",
+        "                rescale=1./255)\n",
+        "\n",
+        "validation_datagen = keras.preprocessing.image.ImageDataGenerator(rescale=1./255)\n",
+        "\n",
+        "# Flow training images in batches of 20 using train_datagen generator\n",
+        "train_generator = train_datagen.flow_from_directory(\n",
+        "                train_dir_path,  # Source directory for the training images\n",
+        "                target_size=(image_size, image_size),  \n",
+        "                batch_size=batch_size,\n",
+        "                # Since we use binary_crossentropy loss, we need binary labels\n",
+        "                class_mode='categorical')\n",
+        "\n",
+        "# Flow validation images in batches of 20 using test_datagen generator\n",
+        "validation_generator = validation_datagen.flow_from_directory(\n",
+        "                validation_dir_path, # Source directory for the validation images\n",
+        "                target_size=(image_size, image_size),\n",
+        "                batch_size=batch_size,\n",
+        "                class_mode='categorical')"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 1325 images belonging to 31 classes.\n",
+            "Found 1325 images belonging to 31 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "RiGPLdulN8fN",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Get a base model"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "ppJGCUPcNySX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        },
+        "outputId": "5d5f3513-5b07-444c-b487-45c4af653b90"
+      },
+      "cell_type": "code",
+      "source": [
+        "IMG_SHAPE = (image_size, image_size, 3)\n",
+        "\n",
+        "# Create the base model from the pre-trained model MobileNet V2\n",
+        "base_model = tf.keras.applications.MobileNetV2(input_shape=IMG_SHAPE,\n",
+        "                                               include_top=False, \n",
+        "                                               weights='imagenet')\n",
+        "\n",
+        "base_model.trainable = False\n",
+        "\n",
+        "# Let's take a look at the base model architecture\n",
+        "base_model.summary()"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/resource_variable_ops.py:435: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Colocations handled automatically by placer.\n",
+            "Downloading data from https://github.com/JonathanCMitchell/mobilenet_v2_keras/releases/download/v1.1/mobilenet_v2_weights_tf_dim_ordering_tf_kernels_1.0_160_no_top.h5\n",
+            "9412608/9406464 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "WhgO3vLiOBhy",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Create a new model using the base model"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "6ImJQhKGOFAs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 243
+        },
+        "outputId": "f79eec38-d30d-421f-d615-6bc9b3e71e67"
+      },
+      "cell_type": "code",
+      "source": [
+        "model = tf.keras.Sequential([\n",
+        "  base_model,\n",
+        "  keras.layers.GlobalAveragePooling2D(),\n",
+        "  keras.layers.Dense(1, activation='sigmoid')\n",
+        "])\n",
+        "\n",
+        "model.compile(optimizer=tf.keras.optimizers.RMSprop(lr=0.0001), \n",
+        "              loss='binary_crossentropy', \n",
+        "              metrics=['accuracy'])\n",
+        "\n",
+        "\n",
+        "model.summary()"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "mobilenetv2_1.00_160 (Model) (None, 5, 5, 1280)        2257984   \n",
+            "_________________________________________________________________\n",
+            "global_average_pooling2d (Gl (None, 1280)              0         \n",
+            "_________________________________________________________________\n",
+            "dense (Dense)                (None, 1)                 1281      \n",
+            "=================================================================\n",
+            "Total params: 2,259,265\n",
+            "Trainable params: 2,225,153\n",
+            "Non-trainable params: 34,112\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "XCqQQ_V6OVZr",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Train the model"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "urSJ79nWOc70",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 897
+        },
+        "outputId": "39ddb0ed-94aa-4dc5-84a4-0129389d5b10"
+      },
+      "cell_type": "code",
+      "source": [
+        "epochs = 10\n",
+        "steps_per_epoch = train_generator.n // batch_size\n",
+        "validation_steps = validation_generator.n // batch_size\n",
+        "\n",
+        "history = model.fit_generator(train_generator, \n",
+        "                              steps_per_epoch = steps_per_epoch,\n",
+        "                              epochs=epochs, \n",
+        "                              workers=4,\n",
+        "                              validation_data=validation_generator, \n",
+        "                              validation_steps=validation_steps)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.cast instead.\n",
+            "Epoch 1/10\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-ec59c2c09c39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m                               \u001b[0mworkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m                               \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalidation_generator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m                               validation_steps=validation_steps)\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch)\u001b[0m\n\u001b[1;32m   1424\u001b[0m         \u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1425\u001b[0m         \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1426\u001b[0;31m         initial_epoch=initial_epoch)\n\u001b[0m\u001b[1;32m   1427\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1428\u001b[0m   def evaluate_generator(self,\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training_generator.py\u001b[0m in \u001b[0;36mmodel_iteration\u001b[0;34m(model, data, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch, mode, batch_size, **kwargs)\u001b[0m\n\u001b[1;32m    189\u001b[0m       \u001b[0mprogbar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon_batch_begin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_logs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    190\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 191\u001b[0;31m       \u001b[0mbatch_outs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbatch_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mbatch_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    192\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_outs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    193\u001b[0m         \u001b[0mbatch_outs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mbatch_outs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36mtrain_on_batch\u001b[0;34m(self, x, y, sample_weight, class_weight, reset_metrics)\u001b[0m\n\u001b[1;32m   1173\u001b[0m     \u001b[0;31m# Validate and standardize user data.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1174\u001b[0m     x, y, sample_weights = self._standardize_user_data(\n\u001b[0;32m-> 1175\u001b[0;31m         x, y, sample_weight=sample_weight, class_weight=class_weight)\n\u001b[0m\u001b[1;32m   1176\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1177\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_eagerly\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[0;34m(self, x, y, sample_weight, class_weight, batch_size, check_steps, steps_name, steps, validation_split, shuffle)\u001b[0m\n\u001b[1;32m   2438\u001b[0m           \u001b[0;31m# Additional checks to avoid users mistakenly using improper loss fns.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2439\u001b[0m           training_utils.check_loss_and_target_compatibility(\n\u001b[0;32m-> 2440\u001b[0;31m               y, self._feed_loss_fns, feed_output_shapes)\n\u001b[0m\u001b[1;32m   2441\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2442\u001b[0m       \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training_utils.py\u001b[0m in \u001b[0;36mcheck_loss_and_target_compatibility\u001b[0;34m(targets, loss_fns, output_shapes)\u001b[0m\n\u001b[1;32m    510\u001b[0m           raise ValueError('A target array with shape ' + str(y.shape) +\n\u001b[1;32m    511\u001b[0m                            \u001b[0;34m' was passed for an output of shape '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 512\u001b[0;31m                            \u001b[0;34m' while using as loss `'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'`. '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    513\u001b[0m                            \u001b[0;34m'This loss expects '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    514\u001b[0m                            \u001b[0;34m'targets to have the same shape '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: A target array with shape (32, 31) was passed for an output of shape (None, 1) while using as loss `binary_crossentropy`. This loss expects targets to have the same shape as the output."
+          ]
+        }
+      ]
     }
   ]
 }
