--- a/Humback_Wales.ipynb
+++ b/Humback_Wales.ipynb
@@ -554,9 +554,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 538
         },
-        "outputId": "c29dfddb-ef5c-4593-854f-966ebfc10d47"
+        "outputId": "618d0724-c4ec-4000-dae6-eb6e619d7552"
       },
       "cell_type": "code",
       "source": [
@@ -571,13 +571,41 @@
         "                              validation_data=validation_generator, \n",
         "                              validation_steps=validation_steps)"
       ],
-      "execution_count": 0,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "20/42 [=============>................] - ETA: 3:43 - loss: 3.2878 - acc: 0.1224"
+            "42/42 [==============================] - 68s 2s/step - loss: 2.9925 - acc: 0.1849\n",
+            "42/42 [==============================] - 486s 12s/step - loss: 3.0878 - acc: 0.2332 - val_loss: 2.9925 - val_acc: 0.1849\n",
+            "Epoch 2/10\n",
+            "42/42 [==============================] - 68s 2s/step - loss: 2.4543 - acc: 0.3328\n",
+            "42/42 [==============================] - 467s 11s/step - loss: 2.0884 - acc: 0.7479 - val_loss: 2.4543 - val_acc: 0.3328\n",
+            "Epoch 3/10\n",
+            "42/42 [==============================] - 67s 2s/step - loss: 2.0721 - acc: 0.4136\n",
+            "42/42 [==============================] - 463s 11s/step - loss: 1.1636 - acc: 0.9057 - val_loss: 2.0721 - val_acc: 0.4136\n",
+            "Epoch 4/10\n",
+            "42/42 [==============================] - 67s 2s/step - loss: 1.8027 - acc: 0.4740\n",
+            "42/42 [==============================] - 464s 11s/step - loss: 0.5246 - acc: 0.9811 - val_loss: 1.8027 - val_acc: 0.4740\n",
+            "Epoch 5/10\n",
+            "42/42 [==============================] - 66s 2s/step - loss: 1.7517 - acc: 0.4936\n",
+            "42/42 [==============================] - 459s 11s/step - loss: 0.2092 - acc: 0.9940 - val_loss: 1.7517 - val_acc: 0.4936\n",
+            "Epoch 6/10\n",
+            "42/42 [==============================] - 67s 2s/step - loss: 1.4447 - acc: 0.6060\n",
+            "42/42 [==============================] - 451s 11s/step - loss: 0.0873 - acc: 0.9985 - val_loss: 1.4447 - val_acc: 0.6060\n",
+            "Epoch 7/10\n",
+            "42/42 [==============================] - 66s 2s/step - loss: 1.1736 - acc: 0.6830\n",
+            "42/42 [==============================] - 454s 11s/step - loss: 0.0353 - acc: 0.9992 - val_loss: 1.1736 - val_acc: 0.6830\n",
+            "Epoch 8/10\n",
+            "42/42 [==============================] - 66s 2s/step - loss: 1.0131 - acc: 0.6981\n",
+            "42/42 [==============================] - 453s 11s/step - loss: 0.0165 - acc: 1.0000 - val_loss: 1.0131 - val_acc: 0.6981\n",
+            "Epoch 9/10\n",
+            "42/42 [==============================] - 67s 2s/step - loss: 0.8858 - acc: 0.7487\n",
+            "42/42 [==============================] - 465s 11s/step - loss: 0.0096 - acc: 1.0000 - val_loss: 0.8858 - val_acc: 0.7487\n",
+            "Epoch 10/10\n",
+            "42/42 [==============================] - 67s 2s/step - loss: 0.8021 - acc: 0.7660\n",
+            "42/42 [==============================] - 463s 11s/step - loss: 0.0045 - acc: 1.0000 - val_loss: 0.8021 - val_acc: 0.7660\n"
           ],
           "name": "stdout"
         }
