--- a/Humback_Wales.ipynb
+++ b/Humback_Wales.ipynb
@@ -29,7 +29,7 @@
       "metadata": {
         "id": "TfhrE5P2tBWR",
         "colab_type": "code",
-        "outputId": "307084e3-9daf-48c9-e04d-d6b28f67267b",
+        "outputId": "e0318272-a90e-4591-d167-f1f33a013578",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -52,7 +52,7 @@
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.image as mpimg"
       ],
-      "execution_count": 19,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +101,7 @@
       "metadata": {
         "id": "tPjFZ1s0t7Qt",
         "colab_type": "code",
-        "outputId": "0e348260-1e6d-4783-abe8-5bf44d0d0d86",
+        "outputId": "8b5ffe7a-4a2a-45a1-e708-476c871257d7",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -127,15 +127,15 @@
         "from google.colab import files\n",
         "files.upload()"
       ],
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-2906d479-d949-4e84-ad8c-9f195e89f9cd\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-2906d479-d949-4e84-ad8c-9f195e89f9cd\">\n",
+              "     <input type=\"file\" id=\"files-f31d0034-e27c-4595-ba0c-085bf2d45c72\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-f31d0034-e27c-4595-ba0c-085bf2d45c72\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -166,7 +166,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 3
         }
       ]
     },
@@ -208,7 +208,7 @@
       "metadata": {
         "id": "3L7exFwzxTF7",
         "colab_type": "code",
-        "outputId": "4fbe56b9-50e7-405a-b4af-d6825546e933",
+        "outputId": "6195f83a-4c4f-4c90-f739-b5edad6dafb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
@@ -218,7 +218,7 @@
       "source": [
         "!kaggle competitions download -c humpback-whale-identification"
       ],
-      "execution_count": 24,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +280,7 @@
       },
       "cell_type": "code",
       "source": [
-        "full_train_dir_path =\"/content/train_new\"\n",
+        "train_dir_path =\"/content/train_new\"\n",
         "validation_dir_path =\"/content/test_new\"\n",
         "\n",
         "myids = ['w_23a388d',\n",
@@ -315,15 +315,15 @@
         "'w_51fc1fc',\n",
         "'w_fd6a3ad']\n",
         "\n",
-        "if not os.path.exists(full_train_dir_path):\n",
-        "  os.mkdir(full_train_dir_path)\n",
+        "if not os.path.exists(train_dir_path):\n",
+        "  os.mkdir(train_dir_path)\n",
         "\n",
         "if not os.path.exists(validation_dir_path):\n",
         "  os.mkdir(validation_dir_path)\n",
         "\n",
         "for wid in myids:\n",
         "    # create a folder for this whale in the training set\n",
-        "    path = os.path.join(full_train_dir_path,wid)\n",
+        "    path = os.path.join(train_dir_path,wid)\n",
         "    if not os.path.exists(path):\n",
         "      os.mkdir(path)\n",
         "\n",
@@ -389,7 +389,7 @@
       "metadata": {
         "id": "8H5sLQt3NLYw",
         "colab_type": "code",
-        "outputId": "b5da0517-ee17-4a8f-ad47-8fe60aa18c46",
+        "outputId": "ad2b4c19-3a35-4cf7-d80e-3225bad3be2d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -398,7 +398,7 @@
       "cell_type": "code",
       "source": [
         "image_size = 160 # All images will be resized to 160x160\n",
-        "batch_size = 32\n",
+        "batch_size = 64\n",
         "\n",
         "# Rescale all images by 1./255 and apply image augmentation\n",
         "train_datagen = keras.preprocessing.image.ImageDataGenerator(\n",
@@ -421,7 +421,7 @@
         "                batch_size=batch_size,\n",
         "                class_mode='categorical')"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +447,7 @@
       "metadata": {
         "id": "ppJGCUPcNySX",
         "colab_type": "code",
-        "outputId": "dc906be9-5993-40bc-bbe7-a5534fa05fef",
+        "outputId": "0902b7c1-b4f1-4aea-b8b1-fb5f2ceb1f66",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 5803
@@ -467,7 +467,7 @@
         "# Let's take a look at the base model architecture\n",
         "base_model.summary()"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -823,7 +823,7 @@
       "metadata": {
         "id": "6ImJQhKGOFAs",
         "colab_type": "code",
-        "outputId": "27c8c2f9-2dd9-42e5-8ce0-058f9450f338",
+        "outputId": "3f86ab93-23b0-4a59-c20c-d047baea0a85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -844,7 +844,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -881,10 +881,10 @@
       "metadata": {
         "id": "urSJ79nWOc70",
         "colab_type": "code",
-        "outputId": "fe76b1a3-6548-4cfa-b732-94ad1153e110",
+        "outputId": "5524e5ff-d23c-4fcf-a992-404f91b9bd73",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 610
+          "height": 280
         }
       },
       "cell_type": "code",
@@ -900,7 +900,7 @@
         "                              validation_data=validation_generator, \n",
         "                              validation_steps=validation_steps)"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -909,35 +909,16 @@
             "Instructions for updating:\n",
             "Use tf.cast instead.\n",
             "Epoch 1/10\n",
-            "42/42 [==============================] - 65s 2s/step - loss: 3.4763 - acc: 0.0362\n",
-            "42/42 [==============================] - 153s 4s/step - loss: 3.4691 - acc: 0.0430 - val_loss: 3.4763 - val_acc: 0.0362\n",
+            "21/21 [==============================] - 67s 3s/step - loss: 3.5224 - acc: 0.0392\n",
+            "21/21 [==============================] - 163s 8s/step - loss: 3.4712 - acc: 0.0325 - val_loss: 3.5224 - val_acc: 0.0392\n",
             "Epoch 2/10\n",
-            "42/42 [==============================] - 65s 2s/step - loss: 3.4260 - acc: 0.0574\n",
-            "42/42 [==============================] - 151s 4s/step - loss: 3.3182 - acc: 0.0596 - val_loss: 3.4260 - val_acc: 0.0574\n",
+            "21/21 [==============================] - 68s 3s/step - loss: 3.4885 - acc: 0.0483\n",
+            "21/21 [==============================] - 159s 8s/step - loss: 3.3802 - acc: 0.0513 - val_loss: 3.4885 - val_acc: 0.0483\n",
             "Epoch 3/10\n",
-            "42/42 [==============================] - 65s 2s/step - loss: 3.3726 - acc: 0.0642\n",
-            "42/42 [==============================] - 161s 4s/step - loss: 3.1970 - acc: 0.0951 - val_loss: 3.3726 - val_acc: 0.0642\n",
+            "21/21 [==============================] - 66s 3s/step - loss: 3.4577 - acc: 0.0491\n",
+            "21/21 [==============================] - 158s 8s/step - loss: 3.2995 - acc: 0.0687 - val_loss: 3.4577 - val_acc: 0.0491\n",
             "Epoch 4/10\n",
-            "42/42 [==============================] - 65s 2s/step - loss: 3.3142 - acc: 0.0770\n",
-            "42/42 [==============================] - 151s 4s/step - loss: 3.0750 - acc: 0.1253 - val_loss: 3.3142 - val_acc: 0.0770\n",
-            "Epoch 5/10\n",
-            "42/42 [==============================] - 64s 2s/step - loss: 3.2547 - acc: 0.0958\n",
-            "42/42 [==============================] - 149s 4s/step - loss: 2.9292 - acc: 0.1826 - val_loss: 3.2547 - val_acc: 0.0958\n",
-            "Epoch 6/10\n",
-            "42/42 [==============================] - 65s 2s/step - loss: 3.1690 - acc: 0.1253\n",
-            "42/42 [==============================] - 151s 4s/step - loss: 2.7716 - acc: 0.2415 - val_loss: 3.1690 - val_acc: 0.1253\n",
-            "Epoch 7/10\n",
-            "42/42 [==============================] - 65s 2s/step - loss: 3.0819 - acc: 0.1457\n",
-            "42/42 [==============================] - 150s 4s/step - loss: 2.6401 - acc: 0.3019 - val_loss: 3.0819 - val_acc: 0.1457\n",
-            "Epoch 8/10\n",
-            "42/42 [==============================] - 64s 2s/step - loss: 2.9981 - acc: 0.1660\n",
-            "42/42 [==============================] - 150s 4s/step - loss: 2.5078 - acc: 0.3562 - val_loss: 2.9981 - val_acc: 0.1660\n",
-            "Epoch 9/10\n",
-            "42/42 [==============================] - 65s 2s/step - loss: 2.9167 - acc: 0.1932\n",
-            "42/42 [==============================] - 149s 4s/step - loss: 2.3593 - acc: 0.4158 - val_loss: 2.9167 - val_acc: 0.1932\n",
-            "Epoch 10/10\n",
-            "42/42 [==============================] - 66s 2s/step - loss: 2.8235 - acc: 0.2143\n",
-            "42/42 [==============================] - 150s 4s/step - loss: 2.2433 - acc: 0.4332 - val_loss: 2.8235 - val_acc: 0.2143\n"
+            " 2/21 [=>............................] - ETA: 1:38 - loss: 3.2331 - acc: 0.1094"
           ],
           "name": "stdout"
         }
@@ -979,7 +960,7 @@
         "plt.title('Training and Validation Loss')\n",
         "plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
